--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "react-tooltip": "^5.5.1",
+    "react-hot-toast": "^2.4.0",
     "sass": "^1.57.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "formik": "^2.2.9",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
