--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.2.1",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "formik": "^2.2.9",
     "framer-motion": "^8.4.3",
+    "jquery": "^3.6.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-tooltip": "^5.5.1",
-    "react-hot-toast": "^2.4.0",
     "sass": "^1.57.1",
     "web-vitals": "^2.1.4",
-    "react-phone-input-2": "^2.15.1", 
-    "formik": "^2.2.9",
     "yup": "^0.32.11"
   },
   "scripts": {
