--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
+    "react-lazy-load-image-component": "^1.5.6",
     "react-phone-input-2": "^2.15.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.6.2",
