--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.3.0",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/lab": "^5.0.0-alpha.115",
+    "@lottiefiles/react-lottie-player": "^3.5.2",
     "@mui/material": "^5.11.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +15,7 @@
     "framer-motion": "^8.4.3",
     "jquery": "^3.6.3",
     "moment": "^2.29.4",
-    "react": "^18.2.0", 
+    "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-daterangepicker": "^8.0.0",
     "react-dom": "^18.2.0",
