Google-map and (added doctor free list in medical center rule)

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-daterangepicker": "^8.0.0",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-phone-input-2": "^2.15.1",
