--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-google-maps": "^9.4.5",
     "react-hot-toast": "^2.4.0",
+    "react-html-table-to-excel": "^2.0.0",
     "react-icons": "^4.7.1",
     "react-phone-input-2": "^2.15.1",
     "react-router-bootstrap": "^0.26.2",
