--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://admin.bytrh.com/",
+  "homepage":"https://admin.bytrh.com",
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.2",
     "@mui/material": "^5.11.4",
