--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "admin",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://admin.bytrh.com",
+  "homepage": "https://admin.bytrh.com",
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.2",
     "@mui/material": "^5.11.4",
@@ -16,6 +16,7 @@
     "framer-motion": "^8.4.3",
     "jquery": "^3.6.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-google-maps": "^9.4.5",
